--- a/package.json
+++ b/package.json
@@ -4,26 +4,40 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
+    "@gritservices/shared-api-client": "file:../packages/shared-api-client",
+    "@gritservices/shared-components": "file:../packages/shared-components",
+    "@gritservices/shared-errors": "file:../packages/shared-errors",
+    "@loadable/component": "^5.16.7",
     "@tanstack/react-query": "^5.82.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.11.0",
     "crypto-js": "^4.2.0",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.3.0",
     "zustand": "^4.5.7"
   },
   "scripts": {
@@ -41,9 +55,10 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@types/crypto-js": "^4.2.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/react-window": "^1.8.8",
     "compression-webpack-plugin": "^11.1.0",
+    "glob": "^11.0.3",
     "terser-webpack-plugin": "^5.3.14",
     "webpack-bundle-analyzer": "^4.10.2"
   },
