--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 # Production environment configuration
-REACT_APP_API_URL=https://backend-b3tt.onrender.com/api
-REACT_APP_SOCKET_URL=https://backend-b3tt.onrender.com
+REACT_APP_API_URL=https://api.gritservices.ae/api
+REACT_APP_SOCKET_URL=https://api.gritservices.ae
 REACT_APP_ENVIRONMENT=production
 
 # Enable performance optimizations
