--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "sideEffects": false,
   "dependencies": {
-    "@gritservices/shared-api-client": "file:../packages/shared-api-client",
-    "@gritservices/shared-components": "file:../packages/shared-components",
-    "@gritservices/shared-errors": "file:../packages/shared-errors",
     "@loadable/component": "^5.16.7",
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "@tanstack/react-query": "^5.82.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +28,7 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "^5.0.1",
